Fixes on Navbarand spacing when resized to phone, still needs touches on picture and overall functionality

--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -1,4 +1,8 @@
-devicon-html5-plain-wordmark
-{
-    font-size: 10rem;
+.article {
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: grid;
+    place-items: center;
 }
