--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -9,19 +9,15 @@
     width: 67%;
     margin-left: auto;
     margin-right: auto;
+    max-width: 67%;
+    min-height: 100%;
 }
 
-@media (min-width: 768px) {
-    .md\:w-2\/3 {
-        width: 66.666667%;
-    }
-}
 .overlay {
     position: absolute;
     top: 0;
-    left: 95px;
-    width: 65%;
-    height: 100%;
+    left: 94px;
+    width: 65.5%;
     background: rgba(0, 0, 0, 0.6);
     color: #ffffff;
     font-family: 'Quicksand', sans-serif;
